// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Всегда возвращает ожидаемый формат данных если не переданы никакие аргументы 1`] = `
Array [
  Object {
    "alias": "leaders",
    "data": Object {
      "emoji": "👑",
      "subtitle": "",
      "title": "Больше всего коммитов",
      "users": Array [],
    },
  },
  Object {
    "alias": "vote",
    "data": Object {
      "emoji": "🔎",
      "subtitle": "",
      "title": "Самый 🔎 внимательный разработчик",
      "users": Array [],
    },
  },
  Object {
    "alias": "chart",
    "data": Object {
      "subtitle": "",
      "title": "Коммиты",
      "users": Array [],
      "values": Array [],
    },
  },
  Object {
    "alias": "diagram",
    "data": Object {
      "categories": Array [
        Object {
          "differenceText": "0 коммитов",
          "title": "> 1001 строки",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "501 — 1000 строк",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "101 — 500 строк",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "1 — 100 строк",
          "valueText": "0 коммитов",
        },
      ],
      "differenceText": "",
      "subtitle": "",
      "title": "Размер коммитов",
      "totalText": "",
    },
  },
  Object {
    "alias": "activity",
    "data": Object {
      "data": Object {
        "fri": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "mon": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "sat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "sun": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "thu": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "tue": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "wed": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
      },
      "subtitle": "",
      "title": "Коммиты, 1 неделя",
    },
  },
]
`;

exports[`Всегда возвращает ожидаемый формат данных если первый аргумент пустой массив 1`] = `
Array [
  Object {
    "alias": "leaders",
    "data": Object {
      "emoji": "👑",
      "subtitle": "",
      "title": "Больше всего коммитов",
      "users": Array [],
    },
  },
  Object {
    "alias": "vote",
    "data": Object {
      "emoji": "🔎",
      "subtitle": "",
      "title": "Самый 🔎 внимательный разработчик",
      "users": Array [],
    },
  },
  Object {
    "alias": "chart",
    "data": Object {
      "subtitle": "",
      "title": "Коммиты",
      "users": Array [],
      "values": Array [],
    },
  },
  Object {
    "alias": "diagram",
    "data": Object {
      "categories": Array [
        Object {
          "differenceText": "0 коммитов",
          "title": "> 1001 строки",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "501 — 1000 строк",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "101 — 500 строк",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "1 — 100 строк",
          "valueText": "0 коммитов",
        },
      ],
      "differenceText": "",
      "subtitle": "",
      "title": "Размер коммитов",
      "totalText": "",
    },
  },
  Object {
    "alias": "activity",
    "data": Object {
      "data": Object {
        "fri": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "mon": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "sat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "sun": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "thu": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "tue": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "wed": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
      },
      "subtitle": "",
      "title": "Коммиты, 1 неделя",
    },
  },
]
`;

exports[`Всегда возвращает ожидаемый формат данных если первый и второй аргументы пустые 1`] = `
Array [
  Object {
    "alias": "leaders",
    "data": Object {
      "emoji": "👑",
      "subtitle": "",
      "title": "Больше всего коммитов",
      "users": Array [],
    },
  },
  Object {
    "alias": "vote",
    "data": Object {
      "emoji": "🔎",
      "subtitle": "",
      "title": "Самый 🔎 внимательный разработчик",
      "users": Array [],
    },
  },
  Object {
    "alias": "chart",
    "data": Object {
      "subtitle": "",
      "title": "Коммиты",
      "users": Array [],
      "values": Array [],
    },
  },
  Object {
    "alias": "diagram",
    "data": Object {
      "categories": Array [
        Object {
          "differenceText": "0 коммитов",
          "title": "> 1001 строки",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "501 — 1000 строк",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "101 — 500 строк",
          "valueText": "0 коммитов",
        },
        Object {
          "differenceText": "0 коммитов",
          "title": "1 — 100 строк",
          "valueText": "0 коммитов",
        },
      ],
      "differenceText": "",
      "subtitle": "",
      "title": "Размер коммитов",
      "totalText": "",
    },
  },
  Object {
    "alias": "activity",
    "data": Object {
      "data": Object {
        "fri": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "mon": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "sat": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "sun": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "thu": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "tue": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "wed": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
      },
      "subtitle": "",
      "title": "Коммиты, 1 неделя",
    },
  },
]
`;

exports[`Функция работает правильно возвращает правильные данные для спринта 963 1`] = `
Array [
  Object {
    "alias": "leaders",
    "data": Object {
      "emoji": "👑",
      "subtitle": "Новый спринт",
      "title": "Больше всего коммитов",
      "users": Array [
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "42",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "36",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "23",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "21",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "19",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "19",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "17",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "17",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "16",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "15",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "13",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "11",
        },
      ],
    },
  },
  Object {
    "alias": "vote",
    "data": Object {
      "emoji": "🔎",
      "subtitle": "Новый спринт",
      "title": "Самый 🔎 внимательный разработчик",
      "users": Array [
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "300 голосов",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "277 голосов",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "267 голосов",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "263 голоса",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "260 голосов",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "252 голоса",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "251 голос",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "244 голоса",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "224 голоса",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "218 голосов",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "206 голосов",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "190 голосов",
        },
      ],
    },
  },
  Object {
    "alias": "chart",
    "data": Object {
      "subtitle": "Новый спринт",
      "title": "Коммиты",
      "users": Array [
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "42",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "36",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "23",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "21",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "19",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "19",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "17",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "17",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "16",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "15",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "13",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "11",
        },
      ],
      "values": Array [
        Object {
          "hint": "Февральская лазурь",
          "title": "958",
          "value": 460,
        },
        Object {
          "hint": "Новый год",
          "title": "959",
          "value": 209,
        },
        Object {
          "hint": "Новый код",
          "title": "960",
          "value": 288,
        },
        Object {
          "hint": "Послевкусие",
          "title": "961",
          "value": 258,
        },
        Object {
          "hint": "С днем мужика!",
          "title": "962",
          "value": 152,
        },
        Object {
          "active": true,
          "hint": "Новый спринт",
          "title": "963",
          "value": 249,
        },
        Object {
          "hint": "Феечки на единорогах",
          "title": "964",
          "value": 249,
        },
        Object {
          "hint": "Раздача долгов",
          "title": "965",
          "value": 446,
        },
        Object {
          "hint": "Три плюс два",
          "title": "966",
          "value": 477,
        },
        Object {
          "hint": "Майские праздники",
          "title": "967",
          "value": 707,
        },
        Object {
          "hint": "Следующий",
          "title": "968",
          "value": 475,
        },
        Object {
          "hint": "Тополиный пух",
          "title": "969",
          "value": 655,
        },
        Object {
          "hint": "Жара",
          "title": "970",
          "value": 354,
        },
        Object {
          "hint": "Репка",
          "title": "971",
          "value": 253,
        },
        Object {
          "hint": "Рисуем сову",
          "title": "972",
          "value": 233,
        },
        Object {
          "hint": "Два места",
          "title": "973",
          "value": 170,
        },
        Object {
          "hint": "Девятый вал",
          "title": "974",
          "value": 182,
        },
        Object {
          "hint": "Лето все",
          "title": "975",
          "value": 160,
        },
        Object {
          "hint": "Снова в школу",
          "title": "976",
          "value": 210,
        },
        Object {
          "hint": "Последний вагон",
          "title": "977",
          "value": 104,
        },
        Object {
          "hint": "Премьера сезона",
          "title": "978",
          "value": 117,
        },
        Object {
          "hint": "Осенняя пора",
          "title": "979",
          "value": 122,
        },
        Object {
          "hint": "Маша, с днем рождения!",
          "title": "980",
          "value": 85,
        },
        Object {
          "hint": "Новая колея",
          "title": "981",
          "value": 90,
        },
        Object {
          "hint": "F5",
          "title": "982",
          "value": 123,
        },
        Object {
          "hint": "Пушной зверек",
          "title": "983",
          "value": 129,
        },
        Object {
          "hint": "Розовый слон",
          "title": "984",
          "value": 120,
        },
        Object {
          "hint": "Весна и женщины",
          "title": "985",
          "value": 173,
        },
        Object {
          "hint": "Третий с конца",
          "title": "986",
          "value": 122,
        },
        Object {
          "hint": "Смирение",
          "title": "987",
          "value": 126,
        },
        Object {
          "hint": "Новогодний затяжной",
          "title": "988",
          "value": 131,
        },
        Object {
          "hint": "Листопад",
          "title": "989",
          "value": 119,
        },
        Object {
          "hint": "Арбузики",
          "title": "990",
          "value": 79,
        },
        Object {
          "hint": "Короткий Крот",
          "title": "991",
          "value": 28,
        },
        Object {
          "hint": "Карантин",
          "title": "992",
          "value": 0,
        },
        Object {
          "hint": "Сдаем хвосты",
          "title": "993",
          "value": 0,
        },
        Object {
          "hint": "Красный",
          "title": "994",
          "value": 0,
        },
        Object {
          "hint": "Салатики",
          "title": "995",
          "value": 0,
        },
        Object {
          "hint": "Бармалей",
          "title": "996",
          "value": 0,
        },
      ],
    },
  },
  Object {
    "alias": "diagram",
    "data": Object {
      "categories": Array [
        Object {
          "differenceText": "0 коммитов",
          "title": "> 1001 строки",
          "valueText": "2 коммита",
        },
        Object {
          "differenceText": "+4 коммита",
          "title": "501 — 1000 строк",
          "valueText": "9 коммитов",
        },
        Object {
          "differenceText": "+25 коммитов",
          "title": "101 — 500 строк",
          "valueText": "52 коммита",
        },
        Object {
          "differenceText": "+68 коммитов",
          "title": "1 — 100 строк",
          "valueText": "186 коммитов",
        },
      ],
      "differenceText": "+97 с прошлого спринта",
      "subtitle": "Новый спринт",
      "title": "Размер коммитов",
      "totalText": "249 коммитов",
    },
  },
  Object {
    "alias": "activity",
    "data": Object {
      "data": Object {
        "fri": Array [
          0,
          1,
          1,
          1,
          2,
          0,
          0,
          0,
          8,
          3,
          4,
          0,
          7,
          1,
          2,
          1,
          7,
          1,
          4,
          0,
          0,
          0,
          1,
          1,
        ],
        "mon": Array [
          0,
          2,
          0,
          6,
          1,
          7,
          0,
          1,
          0,
          1,
          1,
          3,
          0,
          5,
          5,
          3,
          2,
          4,
          0,
          0,
          1,
          0,
          0,
          3,
        ],
        "sat": Array [
          2,
          1,
          0,
          2,
          4,
          0,
          2,
          0,
          3,
          0,
          1,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
          1,
          1,
          4,
          0,
          2,
          1,
        ],
        "sun": Array [
          0,
          2,
          0,
          2,
          1,
          0,
          1,
          1,
          2,
          6,
          0,
          1,
          0,
          2,
          2,
          4,
          0,
          6,
          0,
          0,
          0,
          0,
          1,
          1,
        ],
        "thu": Array [
          1,
          1,
          1,
          4,
          0,
          2,
          0,
          0,
          0,
          0,
          0,
          3,
          2,
          0,
          1,
          3,
          0,
          1,
          0,
          7,
          3,
          0,
          1,
          0,
        ],
        "tue": Array [
          0,
          0,
          0,
          0,
          3,
          4,
          3,
          4,
          0,
          3,
          0,
          5,
          1,
          0,
          3,
          3,
          0,
          4,
          1,
          3,
          0,
          0,
          2,
          0,
        ],
        "wed": Array [
          0,
          2,
          0,
          7,
          1,
          3,
          1,
          0,
          1,
          5,
          2,
          3,
          2,
          2,
          0,
          1,
          0,
          0,
          0,
          1,
          2,
          0,
          0,
          0,
        ],
      },
      "subtitle": "Новый спринт",
      "title": "Коммиты, 1 неделя",
    },
  },
]
`;

exports[`Функция работает правильно возвращает правильные данные для спринта 965 1`] = `
Array [
  Object {
    "alias": "leaders",
    "data": Object {
      "emoji": "👑",
      "subtitle": "Раздача долгов",
      "title": "Больше всего коммитов",
      "users": Array [
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "54",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "54",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "43",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "42",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "40",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "37",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "35",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "33",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "31",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "27",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "26",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "24",
        },
      ],
    },
  },
  Object {
    "alias": "vote",
    "data": Object {
      "emoji": "🔎",
      "subtitle": "Раздача долгов",
      "title": "Самый 🔎 внимательный разработчик",
      "users": Array [
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "327 голосов",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "304 голоса",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "278 голосов",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "273 голоса",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "256 голосов",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "253 голоса",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "229 голосов",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "228 голосов",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "223 голоса",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "212 голосов",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "210 голосов",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "188 голосов",
        },
      ],
    },
  },
  Object {
    "alias": "chart",
    "data": Object {
      "subtitle": "Раздача долгов",
      "title": "Коммиты",
      "users": Array [
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "54",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "54",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "43",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "42",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "40",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "37",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "35",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "33",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "31",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "27",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "26",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "24",
        },
      ],
      "values": Array [
        Object {
          "hint": "Февральская лазурь",
          "title": "958",
          "value": 460,
        },
        Object {
          "hint": "Новый год",
          "title": "959",
          "value": 209,
        },
        Object {
          "hint": "Новый код",
          "title": "960",
          "value": 288,
        },
        Object {
          "hint": "Послевкусие",
          "title": "961",
          "value": 258,
        },
        Object {
          "hint": "С днем мужика!",
          "title": "962",
          "value": 152,
        },
        Object {
          "hint": "Новый спринт",
          "title": "963",
          "value": 249,
        },
        Object {
          "hint": "Феечки на единорогах",
          "title": "964",
          "value": 249,
        },
        Object {
          "active": true,
          "hint": "Раздача долгов",
          "title": "965",
          "value": 446,
        },
        Object {
          "hint": "Три плюс два",
          "title": "966",
          "value": 477,
        },
        Object {
          "hint": "Майские праздники",
          "title": "967",
          "value": 707,
        },
        Object {
          "hint": "Следующий",
          "title": "968",
          "value": 475,
        },
        Object {
          "hint": "Тополиный пух",
          "title": "969",
          "value": 655,
        },
        Object {
          "hint": "Жара",
          "title": "970",
          "value": 354,
        },
        Object {
          "hint": "Репка",
          "title": "971",
          "value": 253,
        },
        Object {
          "hint": "Рисуем сову",
          "title": "972",
          "value": 233,
        },
        Object {
          "hint": "Два места",
          "title": "973",
          "value": 170,
        },
        Object {
          "hint": "Девятый вал",
          "title": "974",
          "value": 182,
        },
        Object {
          "hint": "Лето все",
          "title": "975",
          "value": 160,
        },
        Object {
          "hint": "Снова в школу",
          "title": "976",
          "value": 210,
        },
        Object {
          "hint": "Последний вагон",
          "title": "977",
          "value": 104,
        },
        Object {
          "hint": "Премьера сезона",
          "title": "978",
          "value": 117,
        },
        Object {
          "hint": "Осенняя пора",
          "title": "979",
          "value": 122,
        },
        Object {
          "hint": "Маша, с днем рождения!",
          "title": "980",
          "value": 85,
        },
        Object {
          "hint": "Новая колея",
          "title": "981",
          "value": 90,
        },
        Object {
          "hint": "F5",
          "title": "982",
          "value": 123,
        },
        Object {
          "hint": "Пушной зверек",
          "title": "983",
          "value": 129,
        },
        Object {
          "hint": "Розовый слон",
          "title": "984",
          "value": 120,
        },
        Object {
          "hint": "Весна и женщины",
          "title": "985",
          "value": 173,
        },
        Object {
          "hint": "Третий с конца",
          "title": "986",
          "value": 122,
        },
        Object {
          "hint": "Смирение",
          "title": "987",
          "value": 126,
        },
        Object {
          "hint": "Новогодний затяжной",
          "title": "988",
          "value": 131,
        },
        Object {
          "hint": "Листопад",
          "title": "989",
          "value": 119,
        },
        Object {
          "hint": "Арбузики",
          "title": "990",
          "value": 79,
        },
        Object {
          "hint": "Короткий Крот",
          "title": "991",
          "value": 28,
        },
        Object {
          "hint": "Карантин",
          "title": "992",
          "value": 0,
        },
        Object {
          "hint": "Сдаем хвосты",
          "title": "993",
          "value": 0,
        },
        Object {
          "hint": "Красный",
          "title": "994",
          "value": 0,
        },
        Object {
          "hint": "Салатики",
          "title": "995",
          "value": 0,
        },
        Object {
          "hint": "Бармалей",
          "title": "996",
          "value": 0,
        },
      ],
    },
  },
  Object {
    "alias": "diagram",
    "data": Object {
      "categories": Array [
        Object {
          "differenceText": "-1 коммит",
          "title": "> 1001 строки",
          "valueText": "4 коммита",
        },
        Object {
          "differenceText": "-2 коммита",
          "title": "501 — 1000 строк",
          "valueText": "5 коммитов",
        },
        Object {
          "differenceText": "+48 коммитов",
          "title": "101 — 500 строк",
          "valueText": "92 коммита",
        },
        Object {
          "differenceText": "+152 коммита",
          "title": "1 — 100 строк",
          "valueText": "345 коммитов",
        },
      ],
      "differenceText": "+197 с прошлого спринта",
      "subtitle": "Раздача долгов",
      "title": "Размер коммитов",
      "totalText": "446 коммитов",
    },
  },
  Object {
    "alias": "activity",
    "data": Object {
      "data": Object {
        "fri": Array [
          0,
          0,
          1,
          3,
          1,
          2,
          5,
          8,
          1,
          4,
          2,
          15,
          0,
          0,
          0,
          3,
          2,
          4,
          0,
          3,
          1,
          8,
          0,
          2,
        ],
        "mon": Array [
          0,
          2,
          0,
          2,
          0,
          2,
          3,
          7,
          0,
          9,
          1,
          2,
          1,
          3,
          4,
          5,
          0,
          0,
          0,
          8,
          1,
          6,
          1,
          9,
        ],
        "sat": Array [
          0,
          1,
          0,
          0,
          1,
          0,
          0,
          0,
          1,
          3,
          1,
          3,
          1,
          4,
          4,
          5,
          8,
          0,
          0,
          6,
          0,
          2,
          0,
          0,
        ],
        "sun": Array [
          2,
          0,
          2,
          5,
          4,
          18,
          7,
          0,
          0,
          2,
          2,
          1,
          1,
          2,
          0,
          0,
          0,
          2,
          1,
          1,
          1,
          0,
          1,
          2,
        ],
        "thu": Array [
          0,
          1,
          0,
          6,
          0,
          3,
          1,
          19,
          0,
          3,
          1,
          7,
          1,
          6,
          1,
          6,
          0,
          4,
          0,
          3,
          0,
          2,
          0,
          2,
        ],
        "tue": Array [
          2,
          1,
          0,
          3,
          1,
          1,
          3,
          2,
          0,
          7,
          3,
          2,
          1,
          16,
          0,
          8,
          0,
          7,
          1,
          8,
          0,
          1,
          0,
          3,
        ],
        "wed": Array [
          3,
          5,
          1,
          15,
          2,
          2,
          3,
          18,
          0,
          5,
          0,
          13,
          1,
          1,
          0,
          0,
          0,
          4,
          0,
          1,
          1,
          6,
          1,
          3,
        ],
      },
      "subtitle": "Раздача долгов",
      "title": "Коммиты, 1 неделя",
    },
  },
]
`;

exports[`Функция работает правильно возвращает правильные данные для спринта 977 1`] = `
Array [
  Object {
    "alias": "leaders",
    "data": Object {
      "emoji": "👑",
      "subtitle": "Последний вагон",
      "title": "Больше всего коммитов",
      "users": Array [
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "28",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "21",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "11",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "7",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "7",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "6",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "6",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "5",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "4",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "4",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "3",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "2",
        },
      ],
    },
  },
  Object {
    "alias": "vote",
    "data": Object {
      "emoji": "🔎",
      "subtitle": "Последний вагон",
      "title": "Самый 🔎 внимательный разработчик",
      "users": Array [
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "306 голосов",
        },
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "305 голосов",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "284 голоса",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "273 голоса",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "270 голосов",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "264 голоса",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "242 голоса",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "224 голоса",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "219 голосов",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "216 голосов",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "212 голосов",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "210 голосов",
        },
      ],
    },
  },
  Object {
    "alias": "chart",
    "data": Object {
      "subtitle": "Последний вагон",
      "title": "Коммиты",
      "users": Array [
        Object {
          "avatar": "8.jpg",
          "id": 8,
          "name": "Александр Иванков",
          "valueText": "28",
        },
        Object {
          "avatar": "6.jpg",
          "id": 6,
          "name": "Андрей Мокроусов",
          "valueText": "21",
        },
        Object {
          "avatar": "9.jpg",
          "id": 9,
          "name": "Сергей Бережной",
          "valueText": "11",
        },
        Object {
          "avatar": "5.jpg",
          "id": 5,
          "name": "Александр Николаичев",
          "valueText": "7",
        },
        Object {
          "avatar": "11.jpg",
          "id": 11,
          "name": "Юрий Фролов",
          "valueText": "7",
        },
        Object {
          "avatar": "2.jpg",
          "id": 2,
          "name": "Александр Шлейко",
          "valueText": "6",
        },
        Object {
          "avatar": "4.jpg",
          "id": 4,
          "name": "Вадим Пацев",
          "valueText": "6",
        },
        Object {
          "avatar": "12.jpg",
          "id": 12,
          "name": "Алексей Ярошевич",
          "valueText": "5",
        },
        Object {
          "avatar": "3.jpg",
          "id": 3,
          "name": "Дарья Ковалева",
          "valueText": "4",
        },
        Object {
          "avatar": "10.jpg",
          "id": 10,
          "name": "Яна Берникова",
          "valueText": "4",
        },
        Object {
          "avatar": "7.jpg",
          "id": 7,
          "name": "Дмитрий Андриянов",
          "valueText": "3",
        },
        Object {
          "avatar": "1.jpg",
          "id": 1,
          "name": "Евгений Дементьев",
          "valueText": "2",
        },
      ],
      "values": Array [
        Object {
          "hint": "Февральская лазурь",
          "title": "958",
          "value": 460,
        },
        Object {
          "hint": "Новый год",
          "title": "959",
          "value": 209,
        },
        Object {
          "hint": "Новый код",
          "title": "960",
          "value": 288,
        },
        Object {
          "hint": "Послевкусие",
          "title": "961",
          "value": 258,
        },
        Object {
          "hint": "С днем мужика!",
          "title": "962",
          "value": 152,
        },
        Object {
          "hint": "Новый спринт",
          "title": "963",
          "value": 249,
        },
        Object {
          "hint": "Феечки на единорогах",
          "title": "964",
          "value": 249,
        },
        Object {
          "hint": "Раздача долгов",
          "title": "965",
          "value": 446,
        },
        Object {
          "hint": "Три плюс два",
          "title": "966",
          "value": 477,
        },
        Object {
          "hint": "Майские праздники",
          "title": "967",
          "value": 707,
        },
        Object {
          "hint": "Следующий",
          "title": "968",
          "value": 475,
        },
        Object {
          "hint": "Тополиный пух",
          "title": "969",
          "value": 655,
        },
        Object {
          "hint": "Жара",
          "title": "970",
          "value": 354,
        },
        Object {
          "hint": "Репка",
          "title": "971",
          "value": 253,
        },
        Object {
          "hint": "Рисуем сову",
          "title": "972",
          "value": 233,
        },
        Object {
          "hint": "Два места",
          "title": "973",
          "value": 170,
        },
        Object {
          "hint": "Девятый вал",
          "title": "974",
          "value": 182,
        },
        Object {
          "hint": "Лето все",
          "title": "975",
          "value": 160,
        },
        Object {
          "hint": "Снова в школу",
          "title": "976",
          "value": 210,
        },
        Object {
          "active": true,
          "hint": "Последний вагон",
          "title": "977",
          "value": 104,
        },
        Object {
          "hint": "Премьера сезона",
          "title": "978",
          "value": 117,
        },
        Object {
          "hint": "Осенняя пора",
          "title": "979",
          "value": 122,
        },
        Object {
          "hint": "Маша, с днем рождения!",
          "title": "980",
          "value": 85,
        },
        Object {
          "hint": "Новая колея",
          "title": "981",
          "value": 90,
        },
        Object {
          "hint": "F5",
          "title": "982",
          "value": 123,
        },
        Object {
          "hint": "Пушной зверек",
          "title": "983",
          "value": 129,
        },
        Object {
          "hint": "Розовый слон",
          "title": "984",
          "value": 120,
        },
        Object {
          "hint": "Весна и женщины",
          "title": "985",
          "value": 173,
        },
        Object {
          "hint": "Третий с конца",
          "title": "986",
          "value": 122,
        },
        Object {
          "hint": "Смирение",
          "title": "987",
          "value": 126,
        },
        Object {
          "hint": "Новогодний затяжной",
          "title": "988",
          "value": 131,
        },
        Object {
          "hint": "Листопад",
          "title": "989",
          "value": 119,
        },
        Object {
          "hint": "Арбузики",
          "title": "990",
          "value": 79,
        },
        Object {
          "hint": "Короткий Крот",
          "title": "991",
          "value": 28,
        },
        Object {
          "hint": "Карантин",
          "title": "992",
          "value": 0,
        },
        Object {
          "hint": "Сдаем хвосты",
          "title": "993",
          "value": 0,
        },
        Object {
          "hint": "Красный",
          "title": "994",
          "value": 0,
        },
        Object {
          "hint": "Салатики",
          "title": "995",
          "value": 0,
        },
        Object {
          "hint": "Бармалей",
          "title": "996",
          "value": 0,
        },
      ],
    },
  },
  Object {
    "alias": "diagram",
    "data": Object {
      "categories": Array [
        Object {
          "differenceText": "-3 коммита",
          "title": "> 1001 строки",
          "valueText": "2 коммита",
        },
        Object {
          "differenceText": "-3 коммита",
          "title": "501 — 1000 строк",
          "valueText": "3 коммита",
        },
        Object {
          "differenceText": "-22 коммита",
          "title": "101 — 500 строк",
          "valueText": "13 коммитов",
        },
        Object {
          "differenceText": "-78 коммитов",
          "title": "1 — 100 строк",
          "valueText": "86 коммитов",
        },
      ],
      "differenceText": "-106 с прошлого спринта",
      "subtitle": "Последний вагон",
      "title": "Размер коммитов",
      "totalText": "104 коммита",
    },
  },
  Object {
    "alias": "activity",
    "data": Object {
      "data": Object {
        "fri": Array [
          0,
          0,
          4,
          0,
          1,
          0,
          0,
          3,
          1,
          0,
          3,
          1,
          1,
          4,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          2,
        ],
        "mon": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          11,
          0,
          0,
          0,
          0,
          0,
        ],
        "sat": Array [
          0,
          0,
          0,
          0,
          0,
          3,
          0,
          0,
          0,
          6,
          0,
          0,
          0,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          0,
        ],
        "sun": Array [
          0,
          2,
          1,
          1,
          1,
          1,
          1,
          2,
          0,
          1,
          1,
          2,
          4,
          0,
          0,
          0,
          1,
          0,
          0,
          0,
          1,
          0,
          0,
          0,
        ],
        "thu": Array [
          0,
          0,
          6,
          2,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          1,
          0,
          0,
          1,
          0,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
        ],
        "tue": Array [
          0,
          0,
          0,
          3,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          1,
          0,
          0,
          0,
          0,
          4,
          1,
          0,
          0,
        ],
        "wed": Array [
          0,
          0,
          4,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          1,
          1,
          0,
          2,
          0,
          0,
          0,
          3,
          1,
          1,
          1,
          1,
          1,
        ],
      },
      "subtitle": "Последний вагон",
      "title": "Коммиты, 1 неделя",
    },
  },
]
`;
